<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:layout_editor_absoluteY="81dp"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fiona_alps_bg"
        android:scaleType = "centerCrop">

        <!-- The ActionBar displayed at the top -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fetch_state_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="124dp"
                android:layout_marginStart="124dp"
                android:layout_marginTop="48dp"
                android:onClick="requestLightState"
                android:text="@string/read_state_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/l3_switch" />

            <Switch
                android:id="@+id/l1_switch"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:onClick="switchL1Lights"
                android:text="@string/light_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_switch" />

            <Switch
                android:id="@+id/l2_switch"
                android:layout_width="328dp"
                android:layout_height="28dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:onClick="switchL2Lights"
                android:text="@string/light_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/l1_switch" />

            <Switch
                android:id="@+id/l3_switch"
                android:layout_width="328dp"
                android:layout_height="28dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:onClick="switchL3Lights"
                android:text="@string/light_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/l2_switch" />


            <Switch
                android:id="@+id/main_switch"
                android:layout_width="328dp"
                android:layout_height="28dp"
                android:layout_below="@+id/fetch_state_button"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="112dp"
                android:onClick="switchMainLights"
                android:text="@string/main_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_navigation"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>